default.css
* {
	margin: 0;
	padding: 0;
}
body {
	font-family: "DM Sans", sans-serif;
	font-weight: 400;
	color: #171717;
	font-size: 14px;
}
/* main styling */
.wrapper {
	width: 480px;
	height: 90vh;
	margin: 7.5% auto;
}
header {
	margin: 0 0 20px 0;
}
header p, footer p, .track {
	margin: 0 0 3px 0;
}
.content {
    min-height: calc(75% - 60px);
}
.content p {
	margin: 0 0 20px 0;
}
#tracks {
	margin-bottom: 20px;
}
#tools {
	margin: 0 0 20px 0;
}
#tools li {
	text-decoration: none;
	color: lightgray;
}
footer {;
	height: 70px;
}
/* font styling, colors etc */
h1 {
	font-weight: 500;
	font-size: 15px;
}
h2, h3 {
	font-weight: 400;
	font-size: 15px;
	margin: 0 0 10px 0;
}
ul {
	list-style-type: none;
}
ul li {
	text-decoration: underline;
	margin-bottom: 3px;
}
a {
	color: #0000FF;
}
.track a {
	color: #0000FF;
	text-transform: lowercase;
}
.marquee {
  overflow: hidden;
  white-space: nowrap;
}

.marquee span {
  display: inline-block;
  padding-left: 100%;
  animation: scroll 10s linear infinite;
  font-size: 14px;
}

.marquee:hover span {
  animation-play-state: paused;
}

@keyframes scroll {
  from { transform: translateX(0); }
  to { transform: translateX(-100%); }
}
/* dark mode styling */

/* mobile device styling */
@media screen and (max-width: 480px) {
	.wrapper {
		width: 90%;
	}
	.content {
    	min-height: calc(98% - 60px);
	}
}

